agrego tabla de calificaciones por película

--- a/b_exploracion_limpieza.ipynb
+++ b/b_exploracion_limpieza.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrl4GXrWrNtg207JvEfkvk",
+      "authorship_tag": "ABX9TyOMhTbfrd5nJGKy/N0a+yKK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,12 +120,12 @@
       ],
       "metadata": {
         "id": "h4gvr7LpkcUn",
-        "outputId": "f76f2925-cd3c-4f4c-bdb2-d6fb72ddd5e4",
+        "outputId": "f3fd6577-4c41-493f-d1be-67e6fa640a62",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -1428,19 +1428,55 @@
     {
       "cell_type": "code",
       "source": [
-        "#### verificar cuantas calificaciones tiene cada película\n",
-        "rating_movies = pd.read_sql('''SELECT movieId,\n",
-        "                                     COUNT(*) AS cnt_rat\n",
-        "                              FROM ratings\n",
-        "                              GROUP BY movieId\n",
-        "                              ORDER BY cnt_rat DESC\n",
-        "                            ''', conn)"
+        "# Consulta SQL para calcular la distribución de calificaciones por película\n",
+        "query = \"\"\"\n",
+        "        SELECT\n",
+        "            movieId,\n",
+        "            COUNT(*) AS cnt_rat\n",
+        "        FROM\n",
+        "            ratings\n",
+        "        GROUP BY\n",
+        "            movieId\n",
+        "        ORDER BY\n",
+        "            cnt_rat DESC\n",
+        "        \"\"\"\n",
+        "\n",
+        "# Ejecutar la consulta y cargar los resultados en un DataFrame\n",
+        "dfr3 = pd.read_sql_query(query, conn)\n",
+        "\n",
+        "# Imprimir el DataFrame resultante\n",
+        "print(dfr3)"
       ],
       "metadata": {
-        "id": "uurXt_pzybyX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NRq5aTv92VzV",
+        "outputId": "cee27896-f223-4d51-d777-439639b73296"
       },
-      "execution_count": 59,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "      movieId  cnt_rat\n",
+            "0         356      329\n",
+            "1         318      317\n",
+            "2         296      307\n",
+            "3         593      279\n",
+            "4        2571      278\n",
+            "...       ...      ...\n",
+            "9719       96        1\n",
+            "9720       83        1\n",
+            "9721       77        1\n",
+            "9722       55        1\n",
+            "9723       49        1\n",
+            "\n",
+            "[9724 rows x 2 columns]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
