se agregó nota al final

--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOyDqWS/2PP2Sn7icncvRP8",
+      "authorship_tag": "ABX9TyOSSVKkHraTdeDQG4UXLSP7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "id": "V0o615IrEUoi",
         "outputId": "d564de8f-59d2-433b-c71d-d2fa8c5d753e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "EUAoeyyoEYm5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "8ZkUqUGXDK7R"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
       "metadata": {
         "id": "vYY1g_MjFvN9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,12 +186,12 @@
       "metadata": {
         "id": "77ryWF1UGbX5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -271,7 +271,7 @@
         "id": "d-n-CdNLKRCY",
         "outputId": "4d855057-4e47-4cad-9944-f5a58324c087"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +287,8 @@
       "source": [
         "from google.colab import files\n",
         "\n",
-        "files.download('full_ratings.csv')"
+        "files.download('full_ratings.csv')\n",
+        "##Esta tabla se utilizará en la fase de modelos."
       ],
       "metadata": {
         "colab": {
@@ -297,7 +298,7 @@
         "id": "ff9jWWq8KeAo",
         "outputId": "7ca215f4-f9a9-432b-f96a-3aa8c1efd625"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
