--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSSVKkHraTdeDQG4UXLSP7",
+      "authorship_tag": "ABX9TyOxViVcOh+UHsNX70smnDLG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,16 +41,17 @@
         "\n",
         "# Importar bibliotecas\n",
         "import sqlite3\n",
-        "from sqlalchemy import create_engine"
+        "from sqlalchemy import create_engine\n",
+        "import pandas as pd"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0o615IrEUoi",
-        "outputId": "d564de8f-59d2-433b-c71d-d2fa8c5d753e"
+        "outputId": "82e94d6c-03f3-4fac-8132-616873374975"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,14 +59,10 @@
           "text": [
             "The sql extension is already loaded. To reload it, use:\n",
             "  %reload_ext sql\n",
-            "Requirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.28)\n",
+            "Requirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.29)\n",
             "Requirement already satisfied: typing-extensions>=4.6.0 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (4.10.0)\n",
             "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (3.0.3)\n",
-            "Collecting mysql-connector-python\n",
-            "  Downloading mysql_connector_python-8.3.0-cp310-cp310-manylinux_2_17_x86_64.whl (21.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.5/21.5 MB\u001b[0m \u001b[31m45.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: mysql-connector-python\n",
-            "Successfully installed mysql-connector-python-8.3.0\n"
+            "Requirement already satisfied: mysql-connector-python in /usr/local/lib/python3.10/dist-packages (8.3.0)\n"
           ]
         }
       ]
@@ -74,22 +71,67 @@
       "cell_type": "code",
       "source": [
         "# Conectarse a la base de datos\n",
-        "conn = sqlite3.connect('db_movies')"
+        "conn = sqlite3.connect('db_movies')\n",
+        "# Crear un cursor\n",
+        "cur = conn.cursor()"
       ],
       "metadata": {
         "id": "EUAoeyyoEYm5"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#Crear tabla con usuarios con más de 50 películas vistas y menos de 1000\n",
+        "# Obtener información sobre las columnas de la tabla 'ratings'\n",
+        "cur.execute(\"PRAGMA table_info(ratings)\")\n",
+        "columns_ratings = cur.fetchall()\n",
         "\n",
-        "# Conectarse a la base de datos\n",
-        "conn = sqlite3.connect('db_movies')\n",
+        "# Imprimir el nombre de la columna y su tipo de datos para la tabla 'ratings'\n",
+        "print(\"Tipos de datos de las columnas en la tabla 'ratings':\")\n",
+        "for column in columns_ratings:\n",
+        "    print(column[1] + \": \" + column[2])\n",
         "\n",
+        "# Obtener información sobre las columnas de la tabla 'movies'\n",
+        "cur.execute(\"PRAGMA table_info(movies)\")\n",
+        "columns_movies = cur.fetchall()\n",
+        "\n",
+        "# Imprimir el nombre de la columna y su tipo de datos para la tabla 'movies'\n",
+        "print(\"\\nTipos de datos de las columnas en la tabla 'movies':\")\n",
+        "for column in columns_movies:\n",
+        "    print(column[1] + \": \" + column[2])"
+      ],
+      "metadata": {
+        "id": "H4RnSuqGghr5",
+        "outputId": "f9821a04-5049-4133-f28b-fc0a4f1cba26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tipos de datos de las columnas en la tabla 'ratings':\n",
+            "userId: INTEGER\n",
+            "movieId: INTEGER\n",
+            "rating: REAL\n",
+            "timestamp: INTEGER\n",
+            "\n",
+            "Tipos de datos de las columnas en la tabla 'movies':\n",
+            "movieId: INTEGER\n",
+            "title: TEXT\n",
+            "genres: TEXT\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Crear tabla con usuarios con más de 50 películas vistas y menos de 1000\n",
         "query = \"\"\"\n",
         "    DROP TABLE IF EXISTS usuarios_sel;\n",
@@ -103,31 +145,29 @@
         "\n",
         "# Ejecutar la consulta\n",
         "conn.executescript(query)\n",
-        "\n",
         "# Cerrar la conexión\n",
         "conn.close()"
       ],
       "metadata": {
         "id": "8ZkUqUGXDK7R"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Conectarse a la base de datos\n",
+        "# Crear tabla con películas que han sido calificadas por más de 50 usuarios\n",
         "conn = sqlite3.connect('db_movies')\n",
         "\n",
-        "# Crear tabla con películas que han sido calificadas por más de 50 usuarios\n",
         "query = \"\"\"\n",
         "DROP TABLE IF EXISTS movies_sel;\n",
         "\n",
         "CREATE TABLE movies_sel AS\n",
-        "SELECT movieId,\n",
+        "SELECT \"movieId\",\n",
         "       COUNT(*) AS cnt_rat\n",
         "FROM ratings\n",
-        "GROUP BY movieId\n",
+        "GROUP BY \"movieId\"\n",
         "HAVING cnt_rat > 50\n",
         "ORDER BY cnt_rat DESC;\n",
         "\"\"\"\n",
@@ -135,38 +175,50 @@
         "# Ejecutar la consulta\n",
         "conn.executescript(query)\n",
         "\n",
-        "# Cerrar la conexión\n",
         "conn.close()"
       ],
       "metadata": {
         "id": "vYY1g_MjFvN9"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Conectarse a la base de datos\n",
-        "conn = sqlite3.connect('db_movies')\n",
-        "\n",
         "# Crear tablas filtradas de calificaciones con usuarios y películas\n",
         "##ratings_final\n",
+        "conn = sqlite3.connect('db_movies')\n",
         "\n",
         "query = \"\"\"\n",
         "DROP TABLE IF EXISTS ratings_final;\n",
         "\n",
         "CREATE TABLE ratings_final AS\n",
         "SELECT a.\"userId\" AS user_id,\n",
-        "       a.movieId AS movie_id,\n",
-        "       a.rating AS rating\n",
+        "       a.\"movieId\" AS movie_id,\n",
+        "       a.\"rating\" AS rating\n",
         "FROM ratings a\n",
         "INNER JOIN movies_sel b ON a.movieId = b.movieId\n",
         "INNER JOIN usuarios_sel c ON a.\"userId\" = c.user_id;\n",
         "\"\"\"\n",
-        "\n",
+        "conn.executescript(query)\n",
+        "conn.close()"
+      ],
+      "metadata": {
+        "id": "77ryWF1UGbX5"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "##movies_final\n",
-        "\"\"\"\n",
+        "# Establecer conexión a la base de datos\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "\n",
+        "# Definir la consulta SQL para crear la tabla movies_final\n",
+        "query = \"\"\"\n",
         "DROP TABLE IF EXISTS movies_final;\n",
         "\n",
         "CREATE TABLE movies_final AS\n",
@@ -180,24 +232,24 @@
         "# Ejecutar la consulta\n",
         "conn.executescript(query)\n",
         "\n",
-        "# Cerrar la conexión\n",
+        "# Cerrar la conexión a la base de datos\n",
         "conn.close()"
       ],
       "metadata": {
-        "id": "77ryWF1UGbX5"
+        "id": "fEcmfPLfjKme"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7GVBstjRCvnL",
-        "outputId": "8efb55da-a6ef-4ac6-9a04-40544f56a657"
+        "outputId": "f57e6f7e-2279-4a24-97a7-e96edc83d32e"
       },
       "outputs": [
         {
@@ -209,7 +261,6 @@
         }
       ],
       "source": [
-        "# Conectarse a la base de datos\n",
         "conn = sqlite3.connect('db_movies')\n",
         "cursor = conn.cursor()\n",
         "\n",
@@ -226,13 +277,59 @@
         "\"\"\"\n",
         "\n",
         "# Ejecutar el script SQL\n",
-        "cursor.executescript(script)\n",
+        "conn.executescript(script)\n",
         "\n",
         "# Confirmar los cambios y cerrar la conexión\n",
         "conn.commit()\n",
         "conn.close()\n",
         "\n",
-        "print(\"Tabla 'full_ratings' creada con éxito.\")"
+        "print(\"Tabla 'full_ratings' creada con éxito.\")\n",
+        "\n",
+        "conn.close()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Consulta SQL para seleccionar las primeras filas de la tabla full_ratings\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "\n",
+        "query = \"SELECT * FROM full_ratings LIMIT 5\"  # Cambia el número de filas según tus necesidades\n",
+        "\n",
+        "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
+        "full_ratings = pd.read_sql(query, conn)\n",
+        "\n",
+        "# Mostrar las primeras filas del DataFrame\n",
+        "print(full_ratings)"
+      ],
+      "metadata": {
+        "id": "FOLmlkADlb_c",
+        "outputId": "526d07d2-dc22-4349-e0df-a39fa9900048",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   user_id  movie_id  rating                  movie_title  \\\n",
+            "0        1         1     4.0             Toy Story (1995)   \n",
+            "1        1         3     4.0      Grumpier Old Men (1995)   \n",
+            "2        1         6     4.0                  Heat (1995)   \n",
+            "3        1        47     5.0  Seven (a.k.a. Se7en) (1995)   \n",
+            "4        1        50     5.0   Usual Suspects, The (1995)   \n",
+            "\n",
+            "                                        genres  \n",
+            "0  Adventure|Animation|Children|Comedy|Fantasy  \n",
+            "1                               Comedy|Romance  \n",
+            "2                        Action|Crime|Thriller  \n",
+            "3                             Mystery|Thriller  \n",
+            "4                       Crime|Mystery|Thriller  \n"
+          ]
+        }
       ]
     },
     {
@@ -247,9 +344,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Conectar a la base de datos\n",
-        "conn = sqlite3.connect('db_movies')\n",
-        "\n",
         "# Consulta SQL para seleccionar todos los datos de la tabla full_ratings\n",
         "query = \"SELECT * FROM full_ratings\"\n",
         "\n",
@@ -259,9 +353,6 @@
         "# Guardar el DataFrame como un archivo CSV\n",
         "df.to_csv('full_ratings.csv', index=False)\n",
         "\n",
-        "# Cerrar la conexión\n",
-        "conn.close()\n",
-        "\n",
         "print(\"La tabla 'full_ratings' se ha exportado como full_ratings.csv\")"
       ],
       "metadata": {
@@ -269,9 +360,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d-n-CdNLKRCY",
-        "outputId": "4d855057-4e47-4cad-9944-f5a58324c087"
+        "outputId": "eefb8a18-5d5b-495a-a1ec-09cae9aa2095"
       },
-      "execution_count": null,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,6 +372,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cerrar la conexión\n",
+        "conn.close()"
+      ],
+      "metadata": {
+        "id": "oD55dF5oakti"
+      },
+      "execution_count": 86,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -296,9 +399,9 @@
           "height": 17
         },
         "id": "ff9jWWq8KeAo",
-        "outputId": "7ca215f4-f9a9-432b-f96a-3aa8c1efd625"
+        "outputId": "1dbe7519-d14b-4b1a-9f6f-6f43119d55ae"
       },
-      "execution_count": null,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "display_data",
@@ -359,7 +462,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_6e040760-506b-4b6b-8ae6-2578dd67a38c\", \"full_ratings.csv\", 2009297)"
+              "download(\"download_4a6cae7c-2c8d-4968-809c-331f9ac81d65\", \"full_ratings.csv\", 2009297)"
             ]
           },
           "metadata": {}
