Verificación de tablas finales en el script

--- a/b_exploracion_limpieza.ipynb
+++ b/b_exploracion_limpieza.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNupyNDDsHMA5HoJIEsPWLp",
+      "authorship_tag": "ABX9TyOGplWPmyGUlOsxX7qBS/Zp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2363,6 +2363,42 @@
       "metadata": {
         "id": "baZvkdyuBR0L"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Conectarse a la base de datos\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "\n",
+        "# Crear un cursor\n",
+        "cur = conn.cursor()\n",
+        "\n",
+        "# Obtener una lista de tablas en la base de datos\n",
+        "cur.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+        "tables = cur.fetchall()\n",
+        "\n",
+        "# Imprimir los nombres de las tablas para verificar la información\n",
+        "for table in tables:\n",
+        "    print(table[0])"
+      ],
+      "metadata": {
+        "id": "qtdN3g1UoTb7",
+        "outputId": "a03f67c7-9849-40cb-ec93-82a7260727c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ratings\n",
+            "movies\n"
+          ]
+        }
+      ]
     }
   ]
 }
