verificación de tablas creadas en el script

--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxViVcOh+UHsNX70smnDLG",
+      "authorship_tag": "ABX9TyNarspaTdPsQdCVB1dhphwy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,9 +49,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0o615IrEUoi",
-        "outputId": "82e94d6c-03f3-4fac-8132-616873374975"
+        "outputId": "5c8341c8-9f34-4311-f9ce-14e49a1e5f14"
       },
-      "execution_count": 53,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "EUAoeyyoEYm5"
       },
-      "execution_count": 54,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -104,12 +104,12 @@
       ],
       "metadata": {
         "id": "H4RnSuqGghr5",
-        "outputId": "f9821a04-5049-4133-f28b-fc0a4f1cba26",
+        "outputId": "3b374d72-f720-4468-f40e-7af4a42af275",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "8ZkUqUGXDK7R"
       },
-      "execution_count": 56,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "vYY1g_MjFvN9"
       },
-      "execution_count": 57,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -207,7 +207,7 @@
       "metadata": {
         "id": "77ryWF1UGbX5"
       },
-      "execution_count": 62,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -238,18 +238,18 @@
       "metadata": {
         "id": "fEcmfPLfjKme"
       },
-      "execution_count": 72,
+      "execution_count": 109,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 110,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7GVBstjRCvnL",
-        "outputId": "f57e6f7e-2279-4a24-97a7-e96edc83d32e"
+        "outputId": "48f85c6e-4679-42e1-9018-f25aa0fe5178"
       },
       "outputs": [
         {
@@ -304,12 +304,12 @@
       ],
       "metadata": {
         "id": "FOLmlkADlb_c",
-        "outputId": "526d07d2-dc22-4349-e0df-a39fa9900048",
+        "outputId": "8365e66b-d14f-4d1f-946b-f72d2006545e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,16 +353,19 @@
         "# Guardar el DataFrame como un archivo CSV\n",
         "df.to_csv('full_ratings.csv', index=False)\n",
         "\n",
-        "print(\"La tabla 'full_ratings' se ha exportado como full_ratings.csv\")"
+        "print(\"La tabla 'full_ratings' se ha exportado como full_ratings.csv\")\n",
+        "\n",
+        "# Cerrar la conexión\n",
+        "conn.close()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d-n-CdNLKRCY",
-        "outputId": "eefb8a18-5d5b-495a-a1ec-09cae9aa2095"
+        "outputId": "0b8d5f81-a6a6-4fa8-92e1-ec77ff1283e9"
       },
-      "execution_count": 85,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,96 +379,42 @@
     {
       "cell_type": "code",
       "source": [
-        "# Cerrar la conexión\n",
-        "conn.close()"
-      ],
-      "metadata": {
-        "id": "oD55dF5oakti"
-      },
-      "execution_count": 86,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import files\n",
+        "#Verificar tablas creadas en el script\n",
+        "# Conectarse a la base de datos\n",
+        "conn = sqlite3.connect('db_movies')\n",
         "\n",
-        "files.download('full_ratings.csv')\n",
-        "##Esta tabla se utilizará en la fase de modelos."
+        "# Crear un cursor\n",
+        "cur = conn.cursor()\n",
+        "\n",
+        "# Obtener una lista de tablas en la base de datos\n",
+        "cur.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+        "tables = cur.fetchall()\n",
+        "\n",
+        "# Imprimir los nombres de las tablas para verificar la información\n",
+        "for table in tables:\n",
+        "    print(table[0])"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ff9jWWq8KeAo",
-        "outputId": "1dbe7519-d14b-4b1a-9f6f-6f43119d55ae"
+        "outputId": "aab314ea-b95b-4719-e217-dc470ab67fdb"
       },
-      "execution_count": 87,
+      "execution_count": 113,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_4a6cae7c-2c8d-4968-809c-331f9ac81d65\", \"full_ratings.csv\", 2009297)"
-            ]
-          },
-          "metadata": {}
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ratings\n",
+            "movies\n",
+            "usuarios_sel\n",
+            "movies_sel\n",
+            "ratings_final\n",
+            "movies_final\n",
+            "full_ratings\n"
+          ]
         }
       ]
     }
