se agregó la columna YEAR en la tabla movies para que fuera agregada en las tablas posteriores

--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNarspaTdPsQdCVB1dhphwy",
+      "authorship_tag": "ABX9TyNsVN/4jjQIwxRCichDP3SE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,20 +49,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0o615IrEUoi",
-        "outputId": "5c8341c8-9f34-4311-f9ce-14e49a1e5f14"
+        "outputId": "9c3bc465-243d-4e2d-c23c-5e02f5630714"
       },
-      "execution_count": 103,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The sql extension is already loaded. To reload it, use:\n",
-            "  %reload_ext sql\n",
-            "Requirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.29)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.6 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/1.6 MB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.4/1.6 MB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.8/1.6 MB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━\u001b[0m \u001b[32m1.2/1.6 MB\u001b[0m \u001b[31m8.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.29)\n",
             "Requirement already satisfied: typing-extensions>=4.6.0 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (4.10.0)\n",
             "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (3.0.3)\n",
-            "Requirement already satisfied: mysql-connector-python in /usr/local/lib/python3.10/dist-packages (8.3.0)\n"
+            "Collecting mysql-connector-python\n",
+            "  Downloading mysql_connector_python-8.3.0-cp310-cp310-manylinux_2_17_x86_64.whl (21.5 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.5/21.5 MB\u001b[0m \u001b[31m40.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: mysql-connector-python\n",
+            "Successfully installed mysql-connector-python-8.3.0\n"
           ]
         }
       ]
@@ -78,7 +81,7 @@
       "metadata": {
         "id": "EUAoeyyoEYm5"
       },
-      "execution_count": 104,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -104,12 +107,12 @@
       ],
       "metadata": {
         "id": "H4RnSuqGghr5",
-        "outputId": "3b374d72-f720-4468-f40e-7af4a42af275",
+        "outputId": "d57343c9-c079-4c69-c475-c332ddc99f10",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 105,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,6 +128,134 @@
             "movieId: INTEGER\n",
             "title: TEXT\n",
             "genres: TEXT\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Extraer el año de lanzamiento de la película en la tabla movies, el cual está incluido en el título de película\n",
+        "#Agregar una nueva columna para almacenar el año\n",
+        "\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "cursor = conn.cursor()\n",
+        "\n",
+        "# Agregar una nueva columna para almacenar el año\n",
+        "cursor.execute(\"ALTER TABLE movies ADD COLUMN year INTEGER\")\n",
+        "\n",
+        "# Actualizar la nueva columna con el año extraído del título de la película\n",
+        "cursor.execute(\"\"\"\n",
+        "    UPDATE movies\n",
+        "    SET year = CAST(SUBSTR(title, -5, 4) AS INTEGER)\n",
+        "\"\"\")\n",
+        "\n",
+        "# Confirmar los cambios y cerrar la conexión\n",
+        "conn.commit()\n",
+        "conn.close()"
+      ],
+      "metadata": {
+        "id": "vLPXhC7tnNxM",
+        "outputId": "8de44f16-93eb-4d8d-85da-8a959c0f8334",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "OperationalError",
+          "evalue": "duplicate column name: year",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-7bcb40bcf83b>\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Agregar una nueva columna para almacenar el año\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ALTER TABLE movies ADD COLUMN year INTEGER\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Actualizar la nueva columna con el año extraído del título de la película\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mOperationalError\u001b[0m: duplicate column name: year"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Verificamos las columnas de la tabla 'movies'\n",
+        "\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "cursor = conn.cursor()\n",
+        "\n",
+        "# Obtener información sobre las columnas de la tabla 'movies'\n",
+        "cursor.execute(\"PRAGMA table_info(movies)\")\n",
+        "columns_FR = cursor.fetchall()\n",
+        "\n",
+        "# Imprimir el nombre de la columna y su tipo de datos\n",
+        "for column in columns_FR:\n",
+        "    print(column[1], \"-\", column[2])\n",
+        "\n",
+        "conn.close()"
+      ],
+      "metadata": {
+        "id": "4ZNzfQt2oamk",
+        "outputId": "05e9249d-dd6d-4237-904f-35413cd0f0ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "movieId - INTEGER\n",
+            "title - TEXT\n",
+            "genres - TEXT\n",
+            "year - INTEGER\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# verificamos el contenido de las primeras filas de la tabla movies\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "\n",
+        "query = \"SELECT * FROM movies LIMIT 5\"  # Cambia el número de filas según tus necesidades\n",
+        "\n",
+        "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
+        "movies = pd.read_sql(query, conn)\n",
+        "\n",
+        "# Mostrar las primeras filas del DataFrame\n",
+        "print(movies)"
+      ],
+      "metadata": {
+        "id": "XBMSMZKIpABZ",
+        "outputId": "a2e17b60-370c-422f-bd6d-603873cf3c87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   movieId                               title  \\\n",
+            "0        1                    Toy Story (1995)   \n",
+            "1        2                      Jumanji (1995)   \n",
+            "2        3             Grumpier Old Men (1995)   \n",
+            "3        4            Waiting to Exhale (1995)   \n",
+            "4        5  Father of the Bride Part II (1995)   \n",
+            "\n",
+            "                                        genres  year  \n",
+            "0  Adventure|Animation|Children|Comedy|Fantasy  1995  \n",
+            "1                   Adventure|Children|Fantasy  1995  \n",
+            "2                               Comedy|Romance  1995  \n",
+            "3                         Comedy|Drama|Romance  1995  \n",
+            "4                                       Comedy  1995  \n"
           ]
         }
       ]
@@ -151,7 +282,7 @@
       "metadata": {
         "id": "8ZkUqUGXDK7R"
       },
-      "execution_count": 106,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -180,7 +311,7 @@
       "metadata": {
         "id": "vYY1g_MjFvN9"
       },
-      "execution_count": 107,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -207,7 +338,7 @@
       "metadata": {
         "id": "77ryWF1UGbX5"
       },
-      "execution_count": 108,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -224,7 +355,8 @@
         "CREATE TABLE movies_final AS\n",
         "SELECT a.movieId AS movie_id,\n",
         "       a.title AS movie_title,\n",
-        "       a.genres AS genres\n",
+        "       a.genres AS genres,\n",
+        "       a.year\n",
         "FROM movies a\n",
         "INNER JOIN movies_sel c ON a.movieId = c.movieId;\n",
         "\"\"\"\n",
@@ -238,18 +370,18 @@
       "metadata": {
         "id": "fEcmfPLfjKme"
       },
-      "execution_count": 109,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7GVBstjRCvnL",
-        "outputId": "48f85c6e-4679-42e1-9018-f25aa0fe5178"
+        "outputId": "57a89f9e-48b0-4688-ee8f-c41774c7c29c"
       },
       "outputs": [
         {
@@ -271,7 +403,8 @@
         "CREATE TABLE full_ratings AS\n",
         "SELECT a.*,\n",
         "       c.movie_title,\n",
-        "       c.genres\n",
+        "       c.genres,\n",
+        "       c. year\n",
         "FROM ratings_final a\n",
         "INNER JOIN movies_final c ON a.movie_id = c.movie_id;\n",
         "\"\"\"\n",
@@ -304,12 +437,12 @@
       ],
       "metadata": {
         "id": "FOLmlkADlb_c",
-        "outputId": "8365e66b-d14f-4d1f-946b-f72d2006545e",
+        "outputId": "52476ef0-a9eb-4837-922e-1ccd80badde2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 111,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,12 +455,12 @@
             "3        1        47     5.0  Seven (a.k.a. Se7en) (1995)   \n",
             "4        1        50     5.0   Usual Suspects, The (1995)   \n",
             "\n",
-            "                                        genres  \n",
-            "0  Adventure|Animation|Children|Comedy|Fantasy  \n",
-            "1                               Comedy|Romance  \n",
-            "2                        Action|Crime|Thriller  \n",
-            "3                             Mystery|Thriller  \n",
-            "4                       Crime|Mystery|Thriller  \n"
+            "                                        genres  year  \n",
+            "0  Adventure|Animation|Children|Comedy|Fantasy  1995  \n",
+            "1                               Comedy|Romance  1995  \n",
+            "2                        Action|Crime|Thriller  1995  \n",
+            "3                             Mystery|Thriller  1995  \n",
+            "4                       Crime|Mystery|Thriller  1995  \n"
           ]
         }
       ]
@@ -363,9 +496,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d-n-CdNLKRCY",
-        "outputId": "0b8d5f81-a6a6-4fa8-92e1-ec77ff1283e9"
+        "outputId": "093f4f27-fd08-41ce-d324-0c5190e9f27c"
       },
-      "execution_count": 112,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,9 +532,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ff9jWWq8KeAo",
-        "outputId": "aab314ea-b95b-4719-e217-dc470ab67fdb"
+        "outputId": "8a45f7b4-33b8-4933-d7cf-bb524b344e85"
       },
-      "execution_count": 113,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
