Completado correctamente. Verificar cuál otra variable convertir a "dummies". Algunos ajustes de texto.

--- a/c_modelos1.ipynb
+++ b/c_modelos1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFRY3H+Gfkn7VBJkzrO4av",
+      "authorship_tag": "ABX9TyN9EEVCCNGcr3HfTMRfB7Tp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10021,7 +10021,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "mH55J-iwpC7O"
       },
@@ -10061,7 +10061,7 @@
         "id": "UHRtSxI-6Mvn",
         "outputId": "ec635d9a-02b8-444a-b07d-f1aac83b57e2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10119,7 +10119,7 @@
         "id": "SJOIT1be7ime",
         "outputId": "50c335ac-66d7-4aac-82f3-b4f1d44d6327"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10481,7 +10481,7 @@
         "id": "J2PgNxIT8JyH",
         "outputId": "de694998-e5c9-4c12-f8d4-67a99127ee03"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10543,7 +10543,7 @@
         "id": "iP57vb9zGX0w",
         "outputId": "b06d752b-b385-4d6c-a9fa-19f3e5dd77fc"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10609,7 +10609,7 @@
         "id": "tcPfj788LMoF",
         "outputId": "d06a4830-b94c-47c8-894a-04ededd515c5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10656,16 +10656,16 @@
       "source": [
         "conn = sqlite3.connect('db_moviesF')\n",
         "\n",
-        "# Consulta SQL para obtener todos los registros de la tabla 'full_ratings'\n",
+        "# Consulta SQL para obtener todos los registros de la tabla 'movies_final'\n",
         "query = 'SELECT * FROM movies_final'\n",
         "\n",
         "# Leer los datos en un DataFrame usando pandas\n",
         "movies = pd.read_sql(query, conn)\n",
         "\n",
-        "# Mostrar información sobre el DataFrame antes de convertir 'release_year' a entero\n",
+        "# Mostrar información sobre el DataFrame antes de convertir 'year' a entero\n",
         "movies.info()\n",
         "\n",
-        "# Convertir la columna 'release_year' a tipo entero\n",
+        "# Convertir la columna 'year' a tipo entero\n",
         "movies['year'] = movies['year'].astype('int')\n",
         "\n",
         "# Mostrar información sobre el DataFrame después de la conversión\n",
@@ -10681,7 +10681,7 @@
         "id": "zhWMUhENJxRj",
         "outputId": "bc4224c5-4325-4f0c-cc0b-1cdbb33ad52d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10728,7 +10728,7 @@
       "metadata": {
         "id": "TEoS00Pj6hoj"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10747,7 +10747,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10772,7 +10772,7 @@
       "metadata": {
         "id": "0nIIk0RBKgJ1"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10798,7 +10798,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10825,7 +10825,7 @@
           "height": 291
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11307,7 +11307,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11355,7 +11355,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11379,7 +11379,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#### películas recomendadas ejemplo para visualización todas las peículas\n",
+        "#### películas recomendadas ejemplo para visualización todas las películas\n",
         "\n",
         "def recomendacion(titulo_pelicula, movies):\n",
         "    # Obtener el índice de la película seleccionada\n",
@@ -11411,7 +11411,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11461,7 +11461,7 @@
       "metadata": {
         "id": "y41R8-ybLi1Z"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11473,7 +11473,7 @@
       "metadata": {
         "id": "RV7xQS5EN8oC"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11488,7 +11488,7 @@
       "metadata": {
         "id": "_afuNGB6OEli"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11506,7 +11506,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11561,7 +11561,7 @@
           ]
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
